--- a/catalogue-service/pom.xml
+++ b/catalogue-service/pom.xml
@@ -3,10 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.leviathan</groupId>
+        <artifactId>cparts-store-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.leviathan</groupId>
-    <artifactId>manager-app</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>catalogue-service</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -17,11 +20,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.4.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>3.4.4</version>
         </dependency>
         <dependency>
@@ -36,6 +34,11 @@
             <scope>runtime</scope>
             <optional>true</optional>
             <version>3.4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>3.3.4</version>
         </dependency>
     </dependencies>
     <build>
@@ -62,4 +65,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
