--- a/catalogue-service/src/main/resources/application-standalone.yaml
+++ b/catalogue-service/src/main/resources/application-standalone.yaml
@@ -1,2 +1,11 @@
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5433/catalogue
+    username: catalogue
+    password: catalogue
+  flyway:
+    schemas:
+      - public
+      - catalogue
 server:
   port: 8081
