--- a/catalogue-service/src/main/resources/application-standalone.yaml
+++ b/catalogue-service/src/main/resources/application-standalone.yaml
@@ -7,5 +7,11 @@ spring:
     schemas:
       - public
       - catalogue
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8085/realms/cparts-store
 server:
   port: 8081
+
