--- a/manager-app/pom.xml
+++ b/manager-app/pom.xml
@@ -37,6 +37,11 @@
             <optional>true</optional>
             <version>3.4.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
